<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp"
    android:gravity="center"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_picture"
        android:layout_width="50dp"
        android:layout_height="60dp" android:src="@drawable/ic_action_user"
        app:civ_border_color="?attr/colorButtonNormal"
        app:civ_border_width="1dp"
        android:layout_margin="8dp"
        app:civ_circle_background_color="@color/material_on_primary_emphasis_medium" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_department"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    </LinearLayout>

    <ImageView
        android:id="@+id/user_profile_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete"
        android:layout_margin="8dp"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_baseline_delete_24" />


</LinearLayout>